Redirecting to gitlab, bye microsoft's github

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ ga('send', 'pageview');
     google_ad_client: "ca-pub-1019075959051657",
     enable_page_level_ads: true
   });
-window.location.replace("https://energy1011.github.io/monsterpenguin/");
+window.location.replace("https://energy1011.gitlab.io/");
 </script>
 </head>
 <body>
